<resources>
    <string name="app_name">App Workout</string>
    <string name="done">Done</string>
    <string name="MoreApp">More App</string>
    <string name="Setting">Setting</string>
    <string name="Diet">Diet</string>
    <string name="Report">Report</string>
    <string name="Workout">Workout</string>
    <string name="abs_workout">Abs workout</string>
    <string name="start">Start</string>
    <string name="setting">Setting</string>
    <string name="my_profile">My Profile</string>
    <string name="reminder">Reminder</string>
    <string name="sound_options">Sound Options</string>
    <string name="mute">Mute</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="support">Support</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="intermediate">INTERMEDIATE</string>
    <string name="advanced">ADVANCED</string>
    <string name="today">Today</string>
    <string name="total_completed_workouts">Total completed workouts</string>
    <string name="how_long_were_you_workouts">How long were you workouts?</string>
    <string name="total">Total</string>
    <string name="history">History</string>
    <string name="repeat">Repeat</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="beginner">BEGINNER</string>
    <string name="lose_belly_fat">LOSE BELLY FAT</string>
    <string name="auto_next">Auto Next</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="year_of_birth">Year of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="coming_soon">Coming soon</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="workouts">Workouts</string>
    <string name="favourite">Favourite</string>
    <string name="empty">Empty</string>
    <string name="days">Days</string>
    <string name="standard_diet">Standard Diet</string>
    <string name="vegetarian_diet">Vegetarian Diet</string>
    <string name="afternoon_snack">Afternoon snack</string>
    <string name="breakfast">Breakfast</string>
    <string name="second_breakfast">Second Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="completed">Completed</string>
    <string name="select_language">Select language</string>
    <string name="delete_all">Delete All</string>
    <string name="music">Music</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="levels">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string-array name="level_filter">
        <item>All</item>
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>



    <string name="facebook_app_id">797574174913587</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">1b8837b5a1f7c33135aba4af91ffd864</string>

</resources>