<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--        <TextView-->
<!--            android:text="@string/abs_workout"-->
<!--            style="@style/TextViewStyleBlack"-->
<!--            android:textAlignment="center"-->
<!--            android:layout_marginTop="@dimen/_8sdp"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content">-->
<!--        </TextView>-->

    <LinearLayout
        android:padding="@dimen/_8sdp"
        android:orientation="vertical"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <FrameLayout
            android:id="@+id/imgBeginner"
            android:background="@drawable/beginner"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_gravity="center|start"
                android:layout_marginStart="@dimen/_18sdp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/beginner"
                    android:textColor="#FFFF"
                    android:textStyle="bold"
                    android:textSize="@dimen/_24ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <Button
                    android:id="@+id/btnStartBeginner"
                    android:layout_marginStart="28dp"
                    android:text="@string/start"
                    android:background="@drawable/rounded_transparent_button"
                    style="@style/RoundTransparentButton"
                    android:layout_marginTop="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp">
                </Button>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/imgIntermediate"
            android:background="@drawable/intermediate"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_gravity="center|start"
                android:layout_marginStart="@dimen/_18sdp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/intermediate"
                    android:textColor="#FFFF"
                    android:textStyle="bold"
                    android:textSize="@dimen/_24sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <Button
                    android:id="@+id/btnStartIntermediate"
                    android:layout_marginStart="28dp"
                    android:text="@string/start"
                    android:background="@drawable/rounded_transparent_button"
                    android:textColor="#FFFF"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp">
                </Button>

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/imgAdvanced"
            android:background="@drawable/advanced"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <LinearLayout
                android:layout_gravity="center|start"
                android:layout_marginStart="@dimen/_18sdp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/advanced"
                    android:textColor="#FFFF"
                    android:textStyle="bold"
                    android:textSize="@dimen/_24sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <Button
                    android:id="@+id/btnStartAdvanced"
                    android:layout_marginStart="28dp"
                    android:text="@string/start"
                    android:background="@drawable/rounded_transparent_button"
                    android:textColor="#FFFF"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp">
                </Button>

            </LinearLayout>

        </FrameLayout>



    </LinearLayout>

</LinearLayout>